[tool.poetry]
name = "bank-mask-project"
version = "0.1.0"
description = "Банковский проект для маскировки данных"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.12.0"
isort = "^7.0.0"
mypy = "^1.19.1"


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"

[tool.black]
line-length = 119
exclude = '''
/(
  \\.git
  | \\.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
python_version = "3.14"
warn_return_any = true
disallow_untyped_defs = true
exclude = ['\\.venv/']
